--- a/index.html
+++ b/index.html
@@ -209,7 +209,9 @@
             </p>
           </div>
           <div class="details2">
-            <button><h3>Link Here</h3></button>
+            <button onclick="window.location.href='https://ankush0111.github.io/Calculator/';">
+              <h3>Link Here</h3>
+            </button>
           </div>
         </div>
         <div class="box3">
