--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </div>
           <div class="subject">
             <p>
-              <span id="degree"><b>Class-X:</b></span> BASIRHAT TOWN HIGH
+              <span id="degree"><b>Class-XII:</b></span> BASIRHAT TOWN HIGH
               SCHOOL(H.S)
             </p>
           </div>
